--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="md-form">
                   <input type="text" id="edge-capacity" class="form-control" value="10">
-                  <label for="edge-capacity">capacité</label>
+                  <label for="edge-capacity">longueur</label>
                 </div>
                 <div class="row float-right">
 
@@ -211,7 +211,7 @@
                 <td id="pcc"></td>
               </tr>
               <tr>
-                <th>Coût</th>
+                <th>Longueur</th>
                 <td id="longueur">...</td>
               </tr>
             </table>
