--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="Dijkstra_Visualisation/favicon.png" />
   <title>Algorithm Dijsktra</title>
   <link rel="stylesheet" href="./style.css">
   <!-- Font Awesome -->
@@ -12,7 +12,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.10.1/css/mdb.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Dijkstra_Visualisation/style.css">
 </head>
 
 <body>
@@ -252,27 +252,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- <h1>View</h1> -->
     <table class="view">
       <colgroup>
@@ -302,53 +281,6 @@
     </table>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   </main>
 
   <footer class="text-muted">
@@ -370,18 +302,10 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.10.1/js/mdb.min.js"></script>
 
 
-
-
-
-
-
-
-
-
   <!-- partial -->
   <!-- <script src='https://visjs.github.io/vis-network/standalone/umd/vis-network.min.js'></script> -->
-  <script src='vis-network.js'></script>
-  <script src="./script.js"></script>
+  <script src='Dijkstra_Visualisation/vis-network.js'></script>
+  <script src="Dijkstra_Visualisation/script.js"></script>
 </body>
 
 </html>
